# aws-lambda-runtime-benchmark

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_JP.md  benchmark_results.json  build.sh  template.yaml  test.sh
.claude/: CLAUDE.md
.github/workflows/: deploy.yaml
docs/: my-plan.md  overview.md
dotnet-lambda/src/DotNetFunction/: Book.cs  DotNetFunction.csproj  Function.cs
go-lambda/: Makefile  go.mod  go.sum  lambda.go
java-lambda/: pom.xml
java-lambda/src/main/java/com/filichkin/blog/lambda/handler/: BookHandler.java
java-lambda/src/main/java/com/filichkin/blog/lambda/model/: Book.java
node-lambda/: lambda.js  package.json
python-lambda/: lambda.py
ruby-lambda/: app.rb
rust-lambda/: Cargo.toml  Makefile
rust-lambda/src/: main.rs
scripts/: benchmark_results.json  build.sh  collect_and_chart.py  requirements.txt  test.sh
