[package]
name = "rust-lambda"
version = "0.2.0"
edition = "2021"

[dependencies]
aws-config = "1.5"
aws-sdk-dynamodb = "1.54"
lambda_http = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
